# Solana_TRR_Scripts

./: .gitignore
mmed/: Cargo.toml  README.md
mmed/src/: main.rs
mscd/: Cargo.toml  README.md
mscd/src/: main.rs
mtd/: Cargo.toml  README.md
mtd/src/: main.rs
mtd/tests/: default-test.rs
sample-program/: Cargo.toml
sample-program/src/: lib.rs
