[package]
name = "mmed"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
regex = "1.5"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"
