[package]
name = "macro-test"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = { workspace = true }
serde = { workspace = true }
derivative = "2.2.0"
thiserror = "1.0"
bincode = "1.3.3"

[dev-dependencies]
solana-sdk = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]